# Fo

./: CMakeLists.txt  LICENSE  README.md  fo.cc
include/: CategoryManager.h  FileMoveTask.h  FileOrganizer.h
src/: CategoryManager.cc  FileMoveTask.cc  FileOrganizer.cc
ui/: fo.ui
